# stegobmp

./: .gitignore  .gitmodules  ArgumentList.h  BMP.h  CMakeLists.txt  Endiannes.h  README.md  StegoEncoder.h  StegoEnums.h  main.cpp  simpletextenc.txt  stegobmp_setup.txt  test.cpp
images/: README.txt
images/stegoanalysis/: README.md  secreto1-LSB1.wmv
